--- a/pom.xml
+++ b/pom.xml
@@ -17,35 +17,58 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- Adicionando a dependência para utilizar o ORM JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+	    <!-- Comentando a camada de Segurança até resolver o conflito com o BD -->
 		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- Adicionando a dependência para utilizar o Swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+		<!-- Adicionando a dependência para criar anotações no Swagger -->
+		<dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.20</version>
+        </dependency>
+
+		<!-- Adicionando a dependência para utilizar o BD em memória H2 -->		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- Comentando a camada de Segurança até resolver o conflito com o BD -->
 		<!--
 		<dependency>
@@ -54,6 +77,7 @@
 			<scope>test</scope>
 		</dependency>
 		-->
+
 	</dependencies>
 
 	<build>
