--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,24 @@
 		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.escola</groupId>
 	<artifactId>escola-crud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>escola-crud</name>
 	<description>Java RESTful API criada para uma Escola</description>
+	
 	<properties>
 		<java.version>17</java.version>
+        <spring-boot.version>3.3.0</spring-boot.version>
 	</properties>
+	
 	<dependencies>
 		<!-- Adicionando a dependência para utilizar o ORM JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 
 	    <!-- Comentando a camada de Segurança até resolver o conflito com o BD -->
@@ -34,6 +39,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring-boot.version}</version>
 		</dependency>
 
 		<!-- Adicionando a dependência para utilizar o Swagger -->
@@ -66,6 +72,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring-boot.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -77,7 +84,6 @@
 			<scope>test</scope>
 		</dependency>
 		-->
-
 	</dependencies>
 
 	<build>
@@ -86,6 +92,28 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- Adicionando o JaCoCo no projeto Maven -->
+			<plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
